--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   },
   "homepage": "https://github.com/martynasb/pienapple-api#readme",
   "dependencies": {
-    "async": "^2.5.0",
-    "body-parser": "^1.17.2",
+    "async": "^2.6.0",
+    "body-parser": "^1.18.2",
     "connect-mongo": "^1.3.2",
     "domain": "0.0.1",
-    "express": "^4.15.3",
-    "express-session": "^1.15.3",
+    "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "foreman": "^2.0.0",
     "forever": "^0.15.3",
     "fs": "0.0.2",
@@ -32,16 +32,17 @@
     "lodash": "^3.10.1",
     "md5": "^2.2.1",
     "mocha": "^2.5.3",
-    "mongoose": "^4.11.0",
-    "node-bing-api": "^3.2.1",
+    "mongoose": "^4.13.4",
+    "node-bing-api": "^3.2.2",
     "node-jquery-param": "0.0.2",
-    "oauth2orize": "^1.8.0",
+    "oauth2orize": "^1.11.0",
     "passport": "^0.3.2",
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "path": "^0.11.14",
-    "request": "^2.81.0",
+    "puppeteer": "^0.13.0",
+    "request": "^2.83.0",
     "should": "^7.1.1",
     "should-http": "0.0.4",
     "speakingurl": "^7.0.0",
@@ -50,5 +51,8 @@
     "swig": "^1.4.2",
     "url": "^0.11.0",
     "when": "^3.7.8"
+  },
+  "devDependencies": {
+    "eslint-config-google": "^0.9.1"
   }
 }
