--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/martynasb/pienapple-api#readme",
   "dependencies": {
     "async": "^2.6.0",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "connect-mongo": "^1.3.2",
     "domain": "0.0.1",
@@ -42,6 +43,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.11.14",
     "puppeteer": "^0.13.0",
+    "redis": "^2.8.0",
     "request": "^2.83.0",
     "should": "^7.1.1",
     "should-http": "0.0.4",
