--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.2",
     "connect-mongo": "^1.3.2",
     "domain": "0.0.1",
+    "elasticsearch": "^14.1.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "foreman": "^2.0.0",
