--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "cheerio": "^1.0.0-rc.2",
     "connect-mongo": "^1.3.2",
     "domain": "0.0.1",
     "elasticsearch": "^14.1.0",
