--- a/package.json
+++ b/package.json
@@ -44,6 +44,6 @@
     "istanbul": "^0.4.5",
     "supertest": "^1.2.0",
     "should": "^7.1.1",
-    "should-http": "0.0.4",
+    "should-http": "0.0.4"
   }
 }
