--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "./node_modules/.bin/nf start -f Procfile -e Procfile.env",
-    "test": "./node_modules/.bin/mocha --timeout 15000",
+    "test": "./node_modules/.bin/mocha --timeout 15000 --exit",
     "coverage": "istanbul cover _mocha -- -R spec"
   },
   "dependencies": {
