--- a/package.json
+++ b/package.json
@@ -43,10 +43,11 @@
     "when": "^3.7.8"
   },
   "devDependencies": {
-    "mocha": "^5.0.1",
+    "elasticdump": "^3.3.7",
     "istanbul": "^0.4.5",
-    "supertest": "^3.0.0",
+    "mocha": "^5.0.1",
     "should": "^13.2.1",
-    "should-http": "0.1.1"
+    "should-http": "0.1.1",
+    "supertest": "^3.0.0"
   }
 }
