--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "kue": "^0.11.6",
     "md5": "^2.2.1",
     "mongoose": "^5.0.7",
+    "newrelic": "^4.1.0",
     "node-bing-api": "^3.2.2",
     "node-jquery-param": "0.0.2",
     "path": "^0.12.7",
