--- a/package.json
+++ b/package.json
@@ -9,41 +9,43 @@
     "coverage": "./node_modules/.bin/istanbul cover _mocha -- -R spec"
   },
   "dependencies": {
-    "bluebird": "^3.5.1",
-    "body-parser": "^1.18.2",
+    "bluebird": "^3.5.2",
+    "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
     "connect-mongo": "^2.0.1",
     "domain": "0.0.1",
-    "elasticsearch": "^14.1.0",
-    "express": "^4.16.2",
+    "elasticsearch": "^14.2.2",
+    "express": "^4.16.3",
     "express-session": "^1.15.6",
     "foreman": "^2.0.0",
     "forever": "^0.15.3",
     "fs": "0.0.2",
     "kue": "^0.11.6",
+    "mathjs": "^5.1.2",
     "md5": "^2.2.1",
-    "mongoose": "^5.0.7",
-    "newrelic": "^4.1.0",
+    "mongodb": "^3.1.6",
+    "mongoose": "^5.1.0",
+    "newrelic": "^4.8.1",
     "node-bing-api": "^3.2.2",
     "node-jquery-param": "0.0.2",
     "path": "^0.12.7",
-    "puppeteer": "^1.1.1",
+    "puppeteer": "^1.8.0",
     "randomcolor": "^0.5.3",
     "redis": "^2.8.0",
-    "request": "^2.83.0",
-    "socket.io": "^2.0.4",
+    "request": "^2.88.0",
+    "socket.io": "^2.1.1",
     "speakingurl": "^14.0.1",
     "stopwords": "0.0.9",
-    "underscore": "^1.8.3",
+    "underscore": "^1.9.1",
     "url": "^0.11.0",
     "when": "^3.7.8"
   },
   "devDependencies": {
-    "elasticdump": "^3.3.7",
+    "elasticdump": "^3.4.0",
     "istanbul": "^0.4.5",
-    "mocha": "^5.0.1",
-    "should": "^13.2.1",
+    "mocha": "^5.2.0",
+    "should": "^13.2.3",
     "should-http": "0.1.1",
-    "supertest": "^3.0.0"
+    "supertest": "^3.3.0"
   }
 }
