update packages and fix warnings

--- a/package.json
+++ b/package.json
@@ -5,45 +5,36 @@
   "main": "server.js",
   "scripts": {
     "start": "./node_modules/.bin/nf start",
+    "start-dev" : "node_modules/.bin/nodemon --exec 'npm start -s'",
     "test": "./node_modules/.bin/mocha --timeout 15000 --exit",
-    "coverage": "./node_modules/.bin/istanbul cover _mocha -- -R spec"
+    "coverage": "./node_modules/.bin/nyc cover _mocha -- -R spec"
   },
   "dependencies": {
-    "bluebird": "^3.5.1",
-    "body-parser": "^1.18.2",
+    "bluebird": "^3.7.2",
+    "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.2",
-    "connect-mongo": "^2.0.1",
-    "domain": "0.0.1",
-    "elasticsearch": "^14.1.0",
-    "express": "^4.16.2",
+    "elasticsearch": "^16.5.0",
+    "express": "^4.17.1",
     "express-session": "^1.15.6",
-    "foreman": "^2.0.0",
-    "forever": "^0.15.3",
-    "fs": "0.0.2",
+    "foreman": "^3.0.1",
+    "forever": "^2.0.0",
     "kue": "^0.11.6",
-    "md5": "^2.2.1",
-    "mongoose": "^5.7.1",
-    "newrelic": "^4.1.0",
-    "node-bing-api": "^3.2.2",
-    "node-jquery-param": "0.0.2",
-    "path": "^0.12.7",
-    "puppeteer": "^1.20.0",
-    "randomcolor": "^0.5.3",
+    "mongoose": "^5.8.5",
+    "newrelic": "^6.2.0",
+    "node-bing-api": "^4.0.1",
+    "puppeteer": "^2.0.0",
+    "randomcolor": "^0.5.4",
     "redis": "^2.8.0",
-    "request": "^2.83.0",
-    "socket.io": "^2.0.4",
-    "speakingurl": "^14.0.1",
-    "stopwords": "0.0.9",
-    "underscore": "^1.8.3",
-    "url": "^0.11.0",
-    "when": "^3.7.8"
+    "request": "^2.88.0",
+    "socket.io": "^2.3.0",
+    "underscore": "^1.9.2"
   },
   "devDependencies": {
-    "elasticdump": "^3.3.7",
-    "istanbul": "^0.4.5",
-    "mocha": "^5.0.1",
-    "should": "^13.2.1",
-    "should-http": "0.1.1",
-    "supertest": "^3.0.0"
+    "elasticdump": "^6.16.2",
+    "mocha": "^7.0.0",
+    "nodemon": "^2.0.2",
+    "nyc": "^15.0.0",
+    "should": "^13.2.3",
+    "supertest": "^4.0.2"
   }
 }
