ElasticSearch can be added as external server

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ PORT=4443
 DB=mongodb://localhost/searchx
 REDIS=redis://localhost:6379
 DEFAULT_SEARCH_PROVIDER=elasticsearch
+ELASTIC_SEARCH=localhost:9200
